<resources>
    <string name="app_name">Polizas Liver</string>
    <string name="not_insurance">Aún no cuentas con pólizas contratadas</string>
    <string name="insurance">Póliza # </string>
    <string name="insurance_for">Póliza para: </string>
    <string name="protected_since">Protegido desde: </string>
    <string name="select_date_start">Seleccionar fecha de inicio</string>
    <string name="select_date_end">Seleccionar fecha de fin</string>
    <string name="protected_up_to">Hasta: </string>
    <string name="date_format">--/--/---- </string>
    <string name="cancel_insurance">Cancelar póliza</string>
    <string name="no_insurance">000001</string>
    <string name="description">Descripción :</string>
    <string name="insurance_xxx">Poliza XXX</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat</string>
    <string name="now_protect">Ahora estas protegido</string>
    <string name="back_to_insurance">Regresar a mis pólizas</string>
    <string name="cancel_process">Cancelar proceso</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="close">Cerrar</string>
    <string name="finish">Terminar</string>
    <string name="confir_cancel">Confirmar Cancelación</string>

    <string name="data_personal">Datos personales</string>
    <string name="beneficiary_name">Nombre del beneficiario</string>
    <string name="direction">Dirección</string>
    <string name="cp">C.P.</string>
    <string name="phone">Teléfono</string>
    <string name="emergency_contacto">Contacto en caso de emergencia</string>
    <string name="emergency_phone">Teléfono en caso de emergencia</string>

    <string name="life_insurance">Seguro de vida</string>
    <string name="auto_insurance">Seguro para auto</string>
    <string name="phone_insurance">Seguro para teléfono</string>
    <string name="pets_insurance">Seguro para mascotas</string>

    <string name="desc_life_insurance">El seguro de vida o seguro sobre la vida, cubre los riesgos que puedan afectar a la existencia, integridad o salud de las personas</string>
    <string name="desc_auto_insurance">El seguro de auto es un contrato que protege al conductor, a sus acompañantes y al vehículo de los riesgos que implica conducir. </string>
    <string name="desc_pets_insurance">El seguro veterinario o seguro de salud para mascotas, es un tipo de seguro de salud, orientado a mascotas y otros animales domésticos</string>
    <string name="desc_phone_insurance">El seguro de teléfono móvil cubre el coste de reemplazar o reparar su teléfono móvil si es robado, perdido o dañado .</string>

    <string name="adds_beneficiary">"Añade un beneficiario"</string>
    <string name="adds_direction">"Añade una dirección"</string>
    <string name="adds_emergency_name">"Añade una contacto de emergencia"</string>
    <string name="adds_cp">"Añade un cp"</string>
    <string name="adds_phone">"Añade un  #telefonico</string>

    <string name="less_five">"El cp no puede ser menor a 5"</string>
    <string name="less_ten">"El #telefónico no puede ser menor a 10"</string>

    <string name="cancel_process_take_insurance">Al regresar perderás el proceso de contratación</string>

    <string name="coverage">Coberturas</string>
    <string name="exclusions">Exclusiones</string>
    <string name="deductibles">Deducibles</string>
    <string name="payments">Pagos</string>

    <string name="clauses_auto_coverage">1.Resonsabilida Civil \n2.Daños materiales \n3.Robo total \n4.Gastos médicos a ocupantes \n5.Asistencia vial</string>
    <string name="clauses_auto_exclusions">1.Conducir en estado de ebriedad o bajo drogas \n2.Participar en carreras o competencias ilegales</string>
    <string name="clauses_auto_deductibles">1.Deducible por daños al auto: Entre el 3% y 10% del valor del vehículo. \n2.Deducible por robo total: Entre el 5% y 20% del valor comercial.</string>
    <string name="clauses_auto_payments">1.Básico (solo responsabilidad civil): Desde $1,000 a $5,000 al mes. \n2.obertura amplia: Desde $3,000 a $15,000 al mes.</string>

    <string name="clauses_life_coverage">1.Muerte accidental \n2.Invalidez total o permamente \n3.Enfermedades graves \n4.Devolución de primas</string>
    <string name="clauses_life_exclusions">1.Suicidio \n2.Fallecimiento por actividades de alto riesgo \n3.Guerra o terrorismo</string>
    <string name="clauses_life_deductibles">1.En seguros con ahorro o inversión, podrías pagar cargos administrativos o períodos de espera antes de obtener ciertos beneficios.</string>
    <string name="clauses_life_payments">1.Seguro de vida permanente: Desde $5,000 a $30,000 al mes. \n2.Seguro con ahorro/inversión: Puede superar los $10,000 al mes.</string>

    <string name="clauses_pets_coverage">1.Gastos veterinarios \n2.Medicamentos \n3.Exámenes y diagnósticos \n4.Robo o extravío</string>
    <string name="clauses_pets_exclusions">1.Enfermedades preexistentes \n2.Procedimiento estéticos \n3.Muerte por edad avanzada</string>
    <string name="clauses_pets_deductibles">1.Deducible por robo: 10% a 30% del valor de la mascota. \n2.Puede variar según la marca y modelo.</string>
    <string name="clauses_pets_payments">1.Costo mensual: Desde $5,000 a $2,500 al mes, dependiendo del modelo del celular y la cobertura.</string>

    <string name="clauses_phone_coverage">1.Robo con violencia \n2.Daño accidental \n3.Daño por líquidos \n4.Fallas eléctricas \n5.Coberturas internacionales</string>
    <string name="clauses_phone_exclusions">1.Robo sin violencia o extravío \n2.Daños por negligencia \n3.Reparaciones en lugares no autorizados</string>
    <string name="clauses_phone_deductibles">Deducible por consulta o tratamiento: $1,000 a $5,000 por evento, o un porcentaje del total (5%-20%).</string>
    <string name="clauses_phone_payments">1.Cobertura completa (consultas, cirugías, medicamentos, etc.): Desde $3000 a $8,000 al mes.</string>

    <string name="alert_cancel_insurance_tittle">¿Seguro que deseas cancelar tu póliza?</string>
    <string name="alert_cancel_insurance_message">Esta acción no se puede deshacer. Al cancelar tu póliza perderás su cobertura y beneficios.</string>

    <string name="cancelInsuranceSuccess">Póliza cancelada exitosamente</string>
    <string name="cancelInsuranceError">No pudimos eliminar la póliza en este momento</string>
    <string name="accept_terms">Debes aceptar los terminos de cada apartado</string>
</resources>